[tool.poetry]
name = "dodge-square"
version = "0.1.0"
description = "Dodge the square if ypu can."
authors = ["Lucas Ribeiro"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
